--- a/app/src/main/res/layout/activity_detail_recipe.xml
+++ b/app/src/main/res/layout/activity_detail_recipe.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".DetailRecipeActivity">
 
+    <TextView
+        android:id="@+id/detailRecipe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="164dp"
+        android:layout_marginTop="217dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
